# squeal-boilerplate

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  squeal-boilerplate.cabal
src/Squeal/PostgreSQL/: Boilerplate.hs
