cabal-version:   3.0
name:            squeal-boilerplate
version:         0.9.1.3
synopsis:        Reasonable defaults for squeal-postgresql
license:         BSD-3-Clause
license-file:    LICENSE
author:          Mike Ledger
maintainer:      mike@quasimal.com
category:        Database
build-type:      Simple
extra-doc-files: CHANGELOG.md

common shared
  default-language:   GHC2021
  build-depends:
    , base               >=4.17 && <5
    , finite-typelits
    , lens
    , singletons
    , singletons-base
    , singletons-th
    , sop-core
    , squeal-postgresql  ^>=0.9
    , transformers       >=0.2

  ghc-options:        -Wall
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedLists
    OverloadedStrings
    PackageImports
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeInType
    TypeOperators
    UndecidableInstances
    ViewPatterns

library
  import:          shared
  exposed-modules: Squeal.PostgreSQL.Boilerplate
  hs-source-dirs:  src

-- test-suite squeal-boilerplate-test
--     import:           shared
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          Main.hs
--     build-depends: squeal-boilerplate
